[project]
name = "colorshiftcolor"
description = "This is a custom node for ComfyUI.\nIt reduces colors based on a specified number and allows for adjustments to hue, saturation, and brightness.\nFeatures:Each parameter can be set to random, You can toggle masking (not changing colors) using color numbers, Mask inversion can also be toggled on or off."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "numpy", "scikit-learn", "Pillow"]

[project.urls]
Repository = "https://github.com/852wa/ComfyUI-ColorshiftColor"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hakoniwa"
DisplayName = "ComfyUI-ColorshiftColor"
Icon = ""
